--- a/kanban_life/home/templates/home/base.html
+++ b/kanban_life/home/templates/home/base.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     
-    <nav class="navbar navbar-expand-lg bg-primary-color">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <div class="col-lg-3"></div>
         <div class="col text-align-center">
@@ -33,7 +33,7 @@
               <a class="nav-link" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">GitHub<i class="bi bi-github ms-1"></i></a>
+              <a class="nav-link" href="https://github.com/gustavossandrin/kanban_life" target="_blank">GitHub<i class="bi bi-github ms-1"></i></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Login</a>
@@ -50,7 +50,7 @@
       <div class="container-fluid social-media">
         <div class="row text-align-center">
           <div class="col-4 mt-3">
-            <a href=""><i class="bi bi-envelope footer-link-icon"></i><span class="footer-link-text ms-1">gustavosandrindattein123@gmail.com</span></a>
+            <a href="mailto:gustavosandrindattein123@gmail.com"><i class="bi bi-envelope footer-link-icon"></i><span class="footer-link-text ms-1">gustavosandrindattein123@gmail.com</span></a>
           </div>
           <div class="col-4 mt-3">
             <a href="https://www.linkedin.com/in/gustavo-sandrin-848044241/" target="_blank"><i class="bi bi-linkedin footer-link-icon"></i><span class="footer-link-text ms-1">Linkedin</span></a>
