Criado o HTML inicial da página about

--- a/kanban_life/home/templates/home/base.html
+++ b/kanban_life/home/templates/home/base.html
@@ -21,7 +21,7 @@
       <div class="container-fluid">
         <div class="col-lg-3"></div>
         <div class="col text-align-center">
-          <a class="navbar-brand logo-kanban-life" href="#">Kanban-Life</a>
+          <a class="navbar-brand logo-kanban-life" href="{% url 'home' %}">Kanban-Life</a>
         </div>       
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -30,7 +30,7 @@
 
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link" href="{% url 'about' %}">About</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://github.com/gustavossandrin/kanban_life" target="_blank">GitHub<i class="bi bi-github ms-1"></i></a>
