--- a/kanban_life/home/templates/home/base.html
+++ b/kanban_life/home/templates/home/base.html
@@ -39,7 +39,7 @@
               <a class="nav-link" href="#">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Sign Up</a>
+              <a class="nav-link" href="{% url 'sign_up' %}">Sign Up</a>
             </li>
           </ul>
         </div>
