--- a/kanban_life/home/templates/home/base.html
+++ b/kanban_life/home/templates/home/base.html
@@ -14,6 +14,8 @@
       <!-- CSS PROPRIO -->
       <link rel="stylesheet" href="{% static 'css/style.css' %}" />
 
+      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11" defer></script>
+
   </head>
   <body>
     
