--- a/kanban_life/home/templates/home/sign_up.html
+++ b/kanban_life/home/templates/home/sign_up.html
@@ -19,6 +19,7 @@
                               <label for="id_email" class="form-label">EMAIL</label>
                               <input type="email" class="form-control" id="id_email" name="email">
                             </div>
+                             <p class="form-error m-4" id="emailAlreadyExist">The email provided is already being used</p>
                             <div class="m-4">
                                 <label for="id_password" class="form-label">PASSWORD</label>
                                 <input type="password" class="form-control" id="id_password" name="senha">
@@ -47,12 +48,71 @@
     $('#id_form_sign_up').on('submit', function(e){
         e.preventDefault();
         if (!$('#signUp-terms').is(":checked")){
-            $('.form-error').show();
+            $('#signUp-termsError').show();
             $('#signUp-terms').addClass('checkbox-error-form');
             $('#signUp-terms').focus();
             return false
         }
-        this.submit();
+        // Verificar se já existe o email informado
+        $.ajax({
+            type: "POST",
+            url: "/verificar_email_ja_existente/",
+            dataType: 'json',
+            data: {
+                'csrfmiddlewaretoken': '{{ csrf_token }}',
+                'email_verificar': $('#id_email').val(),
+            },
+            success: function (response)
+            {
+                if (response.existe){
+                    $('#emailAlreadyExist').show();
+                    return false
+                }
+                else {
+                    $.ajax({
+                        type: "POST",
+                        url: "/sign_up/",
+                        dataType: 'json',
+                        data: {
+                            'csrfmiddlewaretoken': '{{ csrf_token }}',
+                            'email': $('#id_email').val(),
+                            'nome_completo': $('#id_nome').val(),
+                            'senha': $('#id_password').val(),
+                        },
+                        success: function (response)
+                        {
+                            const swalWithBootstrapButtons = Swal.mixin({
+                              customClass: {
+                                confirmButton: 'btn btn-success',
+                                cancelButton: 'btn btn-danger'
+                              },
+                              buttonsStyling: false
+                            })
+
+                            swalWithBootstrapButtons.fire({
+                              title: 'Account Created!!!',
+                              text: "Do you want to be taken to the login?",
+                              icon: 'success',
+                              showCancelButton: true,
+                              confirmButtonText: 'Yes take me!',
+                              cancelButtonText: 'Leave me!',
+                              reverseButtons: false
+                            }).then((result) => {
+                              if (result.isConfirmed) {
+                                window.location.href = "/login/"
+                              } else if (
+                                /* Read more about handling dismissals below */
+                                result.dismiss === Swal.DismissReason.cancel
+                              ) {
+                                window.location.href = ""
+                              }
+                            })
+                        }
+                    });
+                }
+            }
+        });
+
 
     })
 
