--- a/static/css/style.css
+++ b/static/css/style.css
@@ -44,6 +44,13 @@ body {
     text-align: center;
 }
 
+.form-divider {
+    background-color: #dcddde;
+    border: 0;
+    height: 1px;
+    width: 100%;
+}
+
 /* BASE NAVBAR */
 
 .navbar {
@@ -119,8 +126,8 @@ body {
 }
 
 .sign-up-form{
-    padding-top: 70px;
-    padding-bottom: 70px;
+    padding-top: 90px;
+    padding-bottom: 120px;
 }
 
 .title-form-sign-up {
