Feito a página de login

--- a/kanban_life/home/templates/home/home.html
+++ b/kanban_life/home/templates/home/home.html
@@ -19,7 +19,7 @@
         <div class="row justify-content-center">
             <div class="col text-align-center">
                 <span class="mensagem-sign-up m-4">Sign Up for Free!</span>
-                <a href=""><span class="btn btn-success m-4">Sign Up</span></a>
+                <a href="{% url 'sign_up' %}"><span class="btn btn-success m-4">Sign Up</span></a>
             </div>       
         </div>
     </div>
