--- a/kanban_life/home/templates/home/sign_up.html
+++ b/kanban_life/home/templates/home/sign_up.html
@@ -33,9 +33,11 @@
                             <div class="m-4 text-align-center">
                                 <button type="submit" class="btn btn-success">CREATE ACCOUNT</button>
                             </div>
-                            <hr class="form-divider m-4">
                             <div class="m-4 text-align-center">
-                                <p>Already have an account? <a href="{% url 'sign_up' %}">Login</a></p>
+                                <hr class="form-divider">
+                            </div>
+                            <div class="m-4 text-align-center">
+                                <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
                             </div>
                             
                           </form>
