Criado um app só para o login, mudado a forma de criar o usuario para salvar a senha da forma correta. Feito o login funcionar

--- a/kanban_life/home/templates/home/sign_up.html
+++ b/kanban_life/home/templates/home/sign_up.html
@@ -37,7 +37,7 @@
                                 <hr class="form-divider">
                             </div>
                             <div class="m-4 text-align-center">
-                                <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
+                                <p>Already have an account? <a href="{% url 'login_index' %}">Login</a></p>
                             </div>
                             
                           </form>
