--- a/kanban_life/login/templates/login/login.html
+++ b/kanban_life/login/templates/login/login.html
@@ -17,7 +17,7 @@
                             </div>
                             <div class="m-4">
                                 <label for="id_password" class="form-label">PASSWORD</label>
-                                <input type="password" class="form-control" id="id_password" name="senha">
+                                <input type="password" class="form-control" id="id_password" name="password">
                             </div>
                             <div class="m-4 text-align-center">
                                 <button type="submit" class="btn btn-success">LOGIN</button>
