--- a/kanban_life/home/templates/home/base.html
+++ b/kanban_life/home/templates/home/base.html
@@ -38,7 +38,7 @@
               <a class="nav-link" href="https://github.com/gustavossandrin/kanban_life" target="_blank">GitHub<i class="bi bi-github ms-1"></i></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'login' %}">Login</a>
+              <a class="nav-link" href="{% url 'login_index' %}">Login</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="{% url 'sign_up' %}">Sign Up</a>
