--- a/kanban_life/login/templates/login/login.html
+++ b/kanban_life/login/templates/login/login.html
@@ -11,13 +11,16 @@
                         <h2 class="text-align-center title-form-login">Login</h2>
                         <form method="post" id="id_form_login">
                             {% csrf_token %}
+                            {% if form.password.errors or form.email.errors %}
+                                <p class="form-error-login m-4">Wrong email or password</p>
+                            {% endif %}
                             <div class="m-4">
-                              <label for="id_email" class="form-label">EMAIL</label>
-                              <input type="email" class="form-control" id="id_email" name="email">
+                                <label for="id_email" class="form-label">EMAIL</label>
+                                <input type="email" class="form-control" id="id_email" name="email" value="{{ form.email.value|default_if_none:'' }}">
                             </div>
                             <div class="m-4">
                                 <label for="id_password" class="form-label">PASSWORD</label>
-                                <input type="password" class="form-control" id="id_password" name="password">
+                                <input type="password" class="form-control" id="id_password" name="password" value="{{ form.password.value|default_if_none:'' }}">
                             </div>
                             <div class="m-4 text-align-center">
                                 <button type="submit" class="btn btn-success">LOGIN</button>
