--- a/static/css/style.css
+++ b/static/css/style.css
@@ -189,6 +189,17 @@ body {
     height: 20%;
 }
 
+.form-error-login {
+    white-space: pre-wrap;
+    border: 2px solid #b94a48;
+    padding: 0.5em;
+    border-radius: 0.25em;
+    color: #b94a48;
+    background-color: #f2dede;
+}
+
+
+
 
 
 
