Feito o estilo da página de quando der o erro 404 ou 500

--- a/kanban_life/home/templates/home/error_404.html
+++ b/kanban_life/home/templates/home/error_404.html
@@ -2,6 +2,14 @@
 {% load static %}
 {% block title %}Kanban Life{% endblock title %}
 {% block body %}
-
+    <div class="container-fluid" id="page-not-found">
+        <div class="row justify-content-center">
+            <div class="col-8 mt-5 page-not-found-message">
+                <h1 class="mt-5">Page not found</h1>
+                <p>Please check that the address in your browser's address bar is correct.</p>
+                <p>If this error happens where you think it should not happen, please contact us at <a href="mailto:gustavosandrindattein123@gmail.com">gustavosandrindattein123</a></p>
+            </div>
+        </div>
+    </div>
 {% endblock body %}
 
