--- a/static/css/style.css
+++ b/static/css/style.css
@@ -235,7 +235,7 @@ body {
     text-align: center;
 }
 
-/* BOARD TABLE */
+/* BOARD TABLE THEAD */
 .board-table{
     margin: 0;
     padding: 0;
@@ -297,7 +297,68 @@ body {
     cursor: pointer;
     font-family: Helvetica Neue,Arial,Helvetica,sans-serif;
 }
+
+/* BOARD TABLE TBODY */
+.board-swimlane {
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid #c3c3c3;
+    display: table-row;
 }
+
+.board-taskListCell {
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border-top: 1px solid #c3c3c3;
+    border-left: 1px solid #e4e4e4;
+    position: relative;
+    height: 1700px;
+}
+
+.column-first {
+    border-left: 1px solid #c3c3c3;
+}
+
+.column-last {
+    border-right: 1px solid #c3c3c3;
+}
+
+.board-taskListCell-inner {
+    height: 100%;
+    position: relative;
+    overflow: hidden;
+}
+
+.board-taskListCellHeader {
+    display: none;
+    position: relative;
+    text-align: center;
+    vertical-align: middle;
+    background-color: #f3f3f3;
+    border-bottom: 1px solid #d7d7d7;
+    height: 27px;
+}
+
+.board-taskListCellHeader-inner {
+    height: 100%;
+    padding-top: 1px;
+}
+
+.taskList {
+    overflow: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
 
 
 
