Criado o modelo da tarefa e feito aparecer na table as tarefas dentro de suas colunas

--- a/kanban_life/board/templates/board/board.html
+++ b/kanban_life/board/templates/board/board.html
@@ -35,7 +35,11 @@
                                 <div class="board-taskListCellHeader-inner"></div>
                             </div>
                             <div class="taskList">
-
+                                {% for tarefa in coluna.tarefas %}
+                                <div class="task task-cyan ">
+                                    <span class="task-name">{{ tarefa.nome }}</span>
+                                </div>
+                                {% endfor %}
                             </div>
                         </div>
                     </td>
